www/style.css
/* ... */
.maintainPages .maintainGfx:after {
    right: 0;
    top: 50%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    width: 294px;
    height: 291px;
    background-image: url(../images/404_right_bubbles.png);
    background-size: cover;
}

.maintainPages .maintainGfx2:after,
.maintainPages .maintainGfx2:before {
    position: absolute;
    content: '';
    z-index: 1;
}

.maintainPages .maintainGfx2:before {
    left: 28.5%;
    top: 36%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    width: 200px;
    height: 273px;
    background-image: url(../images/404_iconographic_1.png);
    background-size: cover;
}

.maintainPages .maintainGfx2:after {
    right: 21%;
    top: 44%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    width: 217px;
    height: 468px;
    background-image: url(../images/404_iconographic_2.png);
    background-size: cover;
}

.txtNote {
    margin-bottom: 30px;
    pointer-events: all;
}

.txtNote h3 {
    font-size: 30px;
    color: #000;
    font-weight: normal;
    margin-bottom: 15px;
}

.txtNote p {
    font-size: 17px;
    color: #878787;
}

.txtNote .btn-oval {
    margin-top: 36px;
}

.errorBody,
.maintenanceBody {
    min-height: calc(100vh - 440px);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    position: relative;
    padding: 72px 0 30px 0;
    position: relative;
}

.errorBody .footer,
.maintenanceBody .footer {
    position: absolute;
    bottom: 40px;
    left: 0;
    right: 0;
    width: 100%;
    font-size: 14px;
    color: #bcbcbc;
    text-align: center;
}

.text-center {
    text-align: center;
}

.btn-oval {
    background-color: #E30C5D;
    color: #fff;
    border-radius: 30px;
    -webkit-border-radius: 30px;
    -moz-border-radius: 30px;
    -webkit-transition: all ease 0.4s;
    transition: all ease 0.4s;
    display: inline-block;
    padding: 0 22px;
    line-height: 40px;
    font-weight: 600;
    outline: none !important;
    cursor: pointer;
}

.btn-oval:hover {
    background-color: #3A3A3A;
    color: #fff;
    border-bottom-left-radius: 0;
}

.graphicsError img {
    max-width: 100%;
}

.ftLinks {
    display: inline-block;
}

.ftLinks a {
    position: relative;
    margin-left: 15px;
    color: #E30C5D;
    text-decoration: none;
}
.ftLinks a:hover {
    color: #3A3A3A;
}
.ftLinks a:before {
    content: '|';
    right: 100%;
    margin-right: 8px;
    pointer-events: none;
    color: #ccc;
}

/* 17-06-2019 */
.ppTacPage {
    border-radius: 15px;
    padding: 30px 15px;
    background-color: #fff;
    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
    max-width: 1514px;
}

.ppTacPage h1 {
    margin-bottom: 30px;
}

.ppTacPage h2,
.ppTacPage h3,
.ppTacPage h4,
.ppTacPage h5,
.ppTacPage h6 {
    margin-bottom: 12px;
}

.ppTacPage h2 {
    margin-top: 50px;
}

.ppTacPage p {
    font-size: 15px;
    line-height: 24px;
}

.ppTacPage li>strong {
    display: block;
}

.ppTacPage ul {
    padding-left: 20px;
}

.ppTacPage ul li {
    font-size: 14px;
}

.ppTacPage ul li+li {
    margin-top: 15px;
}

.inSupport {
    background-color: #fff;
    padding: 15px;
    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
}

.inSupport p {
    margin-top: 0;
}

.ppTacPage p a {
    word-break: break-all;
}

.introExitPopup .container:after {
    clear: both;
}

.introExitPopup .container:after,
.introExitPopup .container:before {
    content: '';
    display: table;
}

/* Socket blocks index page */
.socketInfo {
    padding-top: 20px;
}
.inSocket {
    text-align: center;
}
.d-flex {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}
.d-inline-flex {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    text-align: left;
}
.p-Socket {
    max-width: 1080px;
    margin: 0 auto;
}
.socket-e {
    -webkit-box-flex: 0;
        -ms-flex: 0 0 auto;
            flex: 0 0 auto;
    max-width: inherit;
    padding: 0 35px;
    position: relative;
    box-sizing: border-box;
} 
.socket-e + .socket-e::before {
    content: '';
    position: absolute;
    left: 0;
    height: 58px;
    width: 1px;
    background-color: #ccc;
    top: 50%;
    margin-top: -29px;
    opacity: 0.7;
}
.socket-e span {
    display: block;
    font-size: 14px;
    margin-bottom: 5px;
}
.socket-e h3 {
    font-size: 28px;
}   



/* =========|===|=====================================|===|========== */
/* ==========|=|============= Responsive css ==========|=|========== */
/* ===========|=========================================|========== */
@media (max-height: 620px) and (orientation: landscape) {

    .errorBody,
    .maintenanceBody {
        -webkit-box-pack: start;
        -ms-flex-pack: start;
        justify-content: flex-start;
        overflow: auto;
    }

    .errorBody .footer,
    .maintenanceBody .footer {
        position: relative;
        bottom: 0;
        margin-top: auto;
        margin-bottom: 40px;
    }
}

@media screen and (max-width: 1630px) {
    .bannerMid {
        text-align: center;
        background: url(images/graphic_home_top_left.png) no-repeat left 15px top / 350px auto, url(images/graphic_banner_top_right.png) no-repeat right top / 360px auto;
    }

    .logo {
        margin-left: 20px;
    }

    .navArea {
        margin-right: 20px;
    }
}
/* ... */

